<resources>
    <string name="app_name">Password Generator</string>
    <string name="title_home">Home</string>
    <string name="title_gen_pass">Generate</string>
    <string name="title_all_pass">All Passwords</string>
    <string name="enter_website_text">"Enter the website name: "</string>
    <string name="how_long_text">"Enter your password: "</string>

    <string name="title"><![CDATA[<h3>HERE ARE YOUR PASSWORDS</h3>]]></string>
    <string name="website_intro"><![CDATA[<b>Website:</b>]]></string>
    <string name="password"><![CDATA[<b>Password:</b>]]></string>
    <string name="add_text">Add</string>
    <string name="your_password_manager">Your password manager</string>
    <string name="clear_text">Clear All</string>
    <string name="remove_previous">Remove Previous</string>
    <string name="password_string">Password:</string>
    <string name="website">Website:</string>
    <string name="strength_string">Strength:</string>
    <string name="password_text">password</string>
    <string name="website_text">website</string>

    <string-array name="optionsList">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
</resources>
