<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.passwordgenerator.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/formerPasswordFragment"
        android:name="com.example.passwordgenerator.ui.formerPass.FormerPasswordFragment"
        android:label="@string/title_all_pass"
        tools:layout="@layout/fragment_all_passwords" />
    <fragment
        android:id="@+id/generatePassFragment"
        android:name="com.example.passwordgenerator.ui.generatePass.GeneratePassFragment"
        android:label="@string/title_gen_pass" />
</navigation>
