<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.generatePass.GeneratePassFragment">

        <TextView
            android:id="@+id/enter_website_text"
            style="@style/default_text_style"
            android:layout_marginStart="4dp"
            android:text="@string/enter_website_text"
            app:layout_constraintBottom_toBottomOf="@+id/enter_website_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/enter_website_edit"
            app:layout_constraintVertical_bias="0.421" />

        <EditText
            android:id="@+id/enter_website_edit"
            android:layout_marginTop="8dp"
            android:hint="@string/website_text"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/enter_website_text"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/default_edit_style" />

        <TextView
            android:id="@+id/enter_password_text"
            style="@style/default_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/how_long_text"
            app:layout_constraintBottom_toBottomOf="@+id/enter_password_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/enter_password_edit" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39" />

        <EditText
            android:id="@+id/enter_password_edit"
            style="@style/default_edit_style"
            android:layout_width="149dp"
            android:layout_height="45dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            app:layout_constraintStart_toEndOf="@+id/enter_password_text"
            app:layout_constraintTop_toBottomOf="@+id/enter_website_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>